# bookstore

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: __init__.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
