[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Marcos Mantovani <marcospiderplays@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"
psycopg2 = "^2.9.9"
flake8 = "^7.0.0"
black = "^24.2.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
gitpython = "^3.1.42"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
